2014-06-25  Tobias Burnus  <burnus@net-b.de>

	* caf/single.c (assign_char4_from_char1, assign_char1_from_char4,
	convert_type): New static functions.
	(_gfortran_caf_get, _gfortran_caf_send): Use them.

2014-06-19  Tobias Burnus  <burnus@net-b.de>

	* caf/single.c (_gfortran_caf_co_sum, _gfortran_caf_co_max,
	_gfortran_caf_co_min): Fix stat setting.

2014-06-17  Tobias Burnus  <burnus@net-b.de>

	* caf/libcaf.h (gfc_descriptor_t): New typedef.
	(caf_vector_t): Update.
	(_gfortran_caf_co_sum, _gfortran_caf_co_max, _gfortran_caf_co_min):
	Remove vector-subscript argument.
	(_gfortran_caf_co_send, _gfortran_caf_co_get,
	_gfortran_caf_co_sendget): New.
	* caf/single.c (_gfortran_caf_co_sum, _gfortran_caf_co_max,
	_gfortran_caf_co_min): Remove vector-subscript argument.
	(_gfortran_caf_co_send, _gfortran_caf_co_get,
	_gfortran_caf_co_sendget): New.

2014-06-17  Janne Blomqvist  <jb@gcc.gnu.org>

	* libgfortran.h (xmallocarray): New prototype.
	* runtime/memory.c (xmallocarray): New function.
	(xcalloc): Check for nonzero separately instead of multiplying.
	* generated/*.c: Regenerated.
	* intrinsics/cshift0.c (cshift0): Call xmallocarray instead of
	xmalloc.
	* intrinsics/eoshift0.c (eoshift0): Likewise.
	* intrinsics/eoshift2.c (eoshift2): Likewise.
	* intrinsics/pack_generic.c (pack_internal): Likewise.
	(pack_s_internal): Likewise.
	* intrinsics/reshape_generic.c (reshape_internal): Likewise.
	* intrinsics/spread_generic.c (spread_internal): Likewise.
	(spread_internal_scalar): Likewise.
	* intrinsics/string_intrinsics_inc.c (string_trim): Likewise.
	(string_minmax): Likewise.
	* intrinsics/transpose_generic.c (transpose_internal): Likewise.
	* intrinsics/unpack_generic.c (unpack_internal): Likewise.
	* io/list_read.c (nml_touch_nodes): Don't cast xmalloc return value.
	* io/transfer.c (st_set_nml_var): Call xmallocarray instead of
	xmalloc.
	* io/unit.c (get_internal_unit): Likewise.
	(filename_from_unit): Don't cast xmalloc return value.